--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
 server.tomcat.basedir=tomcat
 server.tomcat.accesslog.directory=logs
 
+
+-- propiedades de conexion a la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/taller2
+spring.datasource.username=usrtaller
+spring.datasource.password=passusrtaller
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
